[package]
name = "default"
version = "0.1.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
description = "`use default::default;`"
readme = "README.md"
documentation = "https://docs.rs/default"
homepage = "https://github.com/dpc/rust-default"
repository = "https://github.com/dpc/rust-default"
